<resources>
    <string name="app_name">PP02</string>
    <string name="appleText">Apples($2.49/lbs)</string>
    <string name="orangeText">Oranges($4.99/lbs)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">ORDER</string>
    <string name="purchase">PURCHASE</string>
    <string name="zero">0</string>
    <string name="totalCost">Order Total: $0.00</string>
    <string name="walletTotal">Wallet Total: $25.00</string>
    <string name="wallet">Wallet: $25.00</string>
</resources>
